# magic-grimoire

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  test_review.py
.claude/skills/adr/: SKILL.md
.claude/skills/adr-review/: SKILL.md
.claude/skills/frontend-robert/: SKILL.md
.claude/skills/owasp-review/: SKILL.md
.claude/skills/prd/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: api-server.yml  backend.yml  claude_code_quality.yml  claude_code_review.yml  docs-sync.yml  frontend.yml  gitleaks.yml  web-app.yml
.obsidian/: app.json  core-plugins.json  graph.json
apps/api-server/: README.md  magic-grimoire.postman_collection.json  pyproject.toml
apps/api-server/alembic/: env.py
apps/api-server/alembic/versions/: 001_initial_schema.py  002_add_user_id_to_decks.py
apps/api-server/app/: main.py  router.py
apps/api-server/app/auth/: dependencies.py
apps/api-server/app/chat/: dtos.py  routes.py  service.py
apps/api-server/app/core/: config.py  database.py  enums.py  guards.py
apps/api-server/app/decks/: dtos.py  model.py  pipeline.py  routes.py  worker.py
apps/api-server/app/services/: redis_cache.py  scryfall_service.py
apps/api-server/app/services/llm/: __init__.py  base.py  claude.py  factory.py  ollama.py  prompts.py
apps/api-server/app/tasks/: dtos.py  model.py  routes.py  streaming.py
apps/api-server/app/workers/: celery_app.py
apps/api-server/tests/: conftest.py  test_auth_dependencies.py  test_chat_routes.py
apps/api-server/tests/integration/: conftest.py  test_deck_routes_db.py  test_task_stream.py  test_worker_pipeline.py
apps/api-server/tests/unit/: test_auth_dependencies.py  test_chat_routes.py  test_chat_service.py  test_cors.py  test_deck_routes_unit.py  test_guards.py  test_llm_base.py  test_llm_claude.py  test_llm_factory.py  test_llm_ollama.py  test_redis_cache.py  test_scryfall_service.py
apps/web-app/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web-app/app/: enums.ts  globals.css  layout.tsx  page.module.css  page.tsx
apps/web-app/tests/: landing.spec.ts  layout.spec.ts
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 001_initial.py
backend/app/: main.py  router.py
backend/app/core/: config.py  database.py
backend/app/decks/: dtos.py  model.py  routes.py  worker.py
backend/app/services/: claude_service.py  redis_cache.py  scryfall_service.py
backend/app/tasks/: dtos.py  model.py  routes.py
backend/app/workers/: celery_app.py
docs/: DOCUMENTATION.md  LEARNINGS.md  architecture-review-20260714-014800.html  documentation-guide.md  workflow.md
docs/_templates/: adr.md
docs/adr/: ADR-0001-auth-and-personal-library.md  ADR-0002-redis-celery-implementation.md  ADR-0003-monorepo-directory-structure.md  index.md
docs/adrs/: ADR-0001-tech-stack-selection.md
docs/superpowers/plans/: 2026-05-03-backend-refactor.md  2026-07-11-api-server-refactor-and-tests.md  2026-07-11-clear-chat.md  2026-07-19-structured-colors.md  2026-07-20-structured-deck-size.md
docs/superpowers/specs/: 2026-05-03-backend-refactor-design.md  2026-07-11-api-server-refactor-and-tests-design.md  2026-07-11-clear-chat-design.md  (+2 more)
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
(+49 files in other folders)
