[project]
name = "grimoire-backend"
version = "0.1.0"
description = "AI-powered Magic: The Gathering deck generator backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.28.0",
    "pyjwt>=2.10.0",
    "pydantic-settings>=2.7.0",
    "anthropic>=0.40.0",
]


[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
# wrap lines once there is more than one import from package. this must
# be used with combine-as-imports = true to be effetive
force-wrap-aliases = true
# keep import blocks instead of breaking them in multiple imports
combine-as-imports = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
